# rb3-xenon

./: .gitignore  .mcp.json  CLAUDE.md  README.md  configure.py  decomp-synth.json
.claude/: settings.json
.claude/skills/asset-extract/: SKILL.md
.claude/skills/batch-check/: SKILL.md
.claude/skills/compare-asm/: SKILL.md
.claude/skills/data-diff/: SKILL.md
.claude/skills/dc3-pair/: SKILL.md
.claude/skills/ghidra-decompile/: SKILL.md
.claude/skills/ghidra-search/: SKILL.md
.claude/skills/ghidra-struct/: SKILL.md
.claude/skills/gpu-capture/: SKILL.md
.claude/skills/gpu-debug/: SKILL.md
.claude/skills/gpu-inspect/: SKILL.md
.claude/skills/native-build/: SKILL.md
.claude/skills/permute/: SKILL.md
.claude/skills/progress/: SKILL.md
.claude/skills/rb3wii-pair/: SKILL.md
.claude/skills/recon/: SKILL.md
.claude/skills/refactor-staff/: SKILL.md
.claude/skills/resolve-vcall/: SKILL.md
.claude/skills/screenshot/: SKILL.md
.claude/skills/stack-layout/: SKILL.md
.claude/skills/struct-info/: SKILL.md
.claude/skills/unicorn-query/: SKILL.md
config/45410914/: config.json  config.yml  objects.json  splits.txt
docs/decomp/: MSVC_X360_REGALLOC.md  OBJECT_MATCHING.md  PRAGMA_CODEGEN_SUMMARY.md  PRAGMA_INDEX.md  PRAGMA_MATCHING_CHECKLIST.md  TECHNICAL_NOTES.md  UPSTREAM_PORT_WORKFLOW.md  XBOX360_FLOATING_POINT_CODEGEN.md  XBOX360_PRAGMA_REFERENCE.md  callgraph-triangulation.md  pin-candidates.md  rtti-vtable-transitivity.md  string-layout-gap.md
docs/permuter/: INDEX.md  bsf-engine.md  guided-permuter.md
docs/plans/: bandobj-port.md  bindiff-integration.md  bindiff-vs-rb3wii.md  codegen-iteration-targets.md  engine-baseclass-layout-bugs.md  engine-reuse-and-asset-rendering.md  execution-schedule.md  exploratory-techniques.md  game-code-anchoring.md  game-code-pairing.md  game-oracle-triage.md  hmx-object-layout.md  instrumentation-patcher-experiment.md  jeff-residual-overlaps.md  jeff-vtable-detector.md  match-first-fn.md  meta_band-port-breaking-changes.md  next-levers-2026-05-29.md  next-wave-onediff-clusters.md  objptr-family-relayout-migration.md  objptr-regression-analysis-2026-05-30.md  path-to-100.md  permuter-readiness.md  permuter-sweep-struct-cascades-2026-05-29.md  pin-tier2-clusters.md  pin-wave-2.md  porting-backlog-ranked.md  porting-wave-1.md  recon-structural-levers-2026-05-29.md  remaining-matching-work-handoff.md  session-handoff-2026-05-27.md  struct-offset-sweep.md  ui-base-layout-reconstruction.md  wave5-session-2026-05-28.md  wire-missing-config-units.md
docs/reference/: DATABASE_SCHEMA.md  FREE60_XEX_FORMAT.md
docs/tools/: GHIDRA.md  GHIDRA_MANUAL_SETUP.md  GHIDRA_SETUP.md  INDEX.md  REFERENCE.md  UNICORN_FUNCTION_RUNNER.md  WORKFLOW.md  XEXLOADERWV.md
docs/vmx128/: COMPARISON_REPORT.md  DC3_VMX128_USAGE.md  GESTURE_TARGETS.md  GHIDRA_IMPLEMENTATION.md  ISA_REFERENCE.md  PHASE4_TODO.md  PLAN.md  README.md  REFERENCE_SOURCES.md  REGISTER_ENCODING.md  SESSION_CONTEXT.md  SESSION_HANDOFF.md  TESTING.md  VCMPBFP128_SEMANTICS.md
native/: CMakeLists.txt
native/include/__iterator/: wrap_iter.h
native/include/bits/: stl_iterator.h
native/src/: dta_link_stubs.s  main_dta.cpp  msvc_compat.h  native_job_stubs.cpp  native_link_glue.cpp  thunk_stubs.cpp  vectorintrinsics.h  xdk_shims.cpp
native/src/platform/: Achievements_Stub.cpp  AsyncFile_Native.cpp  Cache_Stub.cpp  ChecksumData_Stub.cpp  File_Native.cpp  Joypad_Stub.cpp  Keyboard_Stub.cpp  MapFile_Stub.cpp  Memcard_Stub.cpp  Memory_Native.cpp  NetXbox_Stub.cpp  Net_Stub.cpp  NetworkSocket_Stub.cpp  PlatformMgr_Native.cpp  System_Native.cpp  ThreadCall_Native.cpp  VirtualKeyboard_Stub.cpp
native/src/stl/: _algo.h  _algobase.h  _iterator.h  _iterator_base.h  _map.h  _pair.h  _tree.h  _vector.h
scripts/: README.md  atexit_fuzzy_verify.py  batch_check.py  check_objects_json.py  clean_stale_objects.sh  configure_existing_worktree.sh  create_data_stubs.py  dc3_compare.py  dump_vtable.py  extract_decomp_symbols.py  get_progress.py  ingest_report.py  measure_progress.sh  obj_anon_ns_patcher.py  obj_atexit_scope_patcher.py  obj_bool_mangle_patcher.py  obj_dynamic_init_patcher.py  obj_guard_patcher.py  obj_regswap_patcher.py  obj_target_symbol_renamer.py  obj_transplant_patcher.py  permuter  permuter_rb3xenon.py  permuter_targets.py  recon.py  reset_false_complete.py  setup_worktree.sh  sync_match_percent.py  target_symbol_map.json  validate_symbols.py
scripts/analysis/: audit_normalized_masking.py  codeview_locals.py  compare_progress.py  diff_inspect.py  stack_layout.py
scripts/orchestrator/: __init__.py  database.py  mcp_server.py  worktree_pool.py
src/: BandOffline.h  BudgetScreen.h  Memory.h  Memory_Xbox.cpp  keygen_xbox.cpp  types.h
src/meta_ham/: HamMemcardAction.h  HamSongMetadata.h  HamSongMgr.h  MetaPerformer.h  MetagameStats.h  Playlist.h  SkeletonIdentifier.h  SkillsAwardList.h
src/system/: decomp_pch.cpp  decomp_pch.h  negate_test.cpp
src/xdk/: NUI.h  XAPILIB.h  XBC.h  XBOXKRNL.h  win_types.h
tools/: dc3_map.py  defines_common.py  download_tool.py  find_struct_gaps.py  fingerprint_match.py  game_oracle_triage.py  game_splits.py  gen_game_target_map.py  ninja-locked  pin_candidates.py  project.py  struct_db.py
tools/exploratory/: callgraph_triangulate.py  consolidate.py  rtti_vtable_combined.py  rtti_walk.py  vtable_transitivity.py
tools/ghidra/: ImportMapFile.java  SearchString.java  StringSearch.java  __init__.py  apply_symbols.py  batch_export.py  batch_export_types.py  build_symbol_map.py  code_search.py  direct_client.py  export_types.py  ghidra-callgraph.py  ghidra-decompile.py  ghidra-search.py  ghidra-status.py  ghidra-xrefs.py  import-xex.sh  mcp_client.py  pcode_inspect.py  pyghidra-service.sh  rb3_symbol_map.json  run_apply_symbols.sh  search-string.sh  struct_check.py  test-hardening.sh
tools/xexp-apply/: CMakeLists.txt  main.cpp
(+1544 files in other folders)
